# PDForge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVGUIDE.md  Makefile  README.md  install.sh  main.py  pyproject.toml  requirements-appimage.txt  requirements-dev.txt  requirements-flatpak.txt  requirements.txt  uninstall.sh
.github/workflows/: ci.yml  release.yml
config/: __init__.py  settings.py
core/: __init__.py  batch_processor.py  document_classifier.py  font_detector.py  metadata.py  ocr_engine.py  pdf_compressor.py  pdf_editor.py  pdf_image_converter.py  pdf_merger.py  pdf_page_organizer.py  pdf_reader.py  pdf_rotator.py  pdf_security.py  pdf_splitter.py  pdf_watermark.py  signature_handler.py
docs/audit/: auditoria-externa-v1.md
docs/guides/: features.md  installation.md
docs/plans/: architecture_v1.md
docs/sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md  sprint-14.md  sprint-15.md  sprint-16.md
packaging/: build-deb.sh  build-flatpak.sh  set-version.sh
packaging/appimage/: AppRun  build-appimage.sh  pdfforge.desktop
packaging/flatpak/: com.github.andrebfarias.pdfforge.yml
scripts/: generate_icons.py
tests/: conftest.py
tests/core/: test_batch_processor.py  test_document_classifier.py  test_font_detector.py  test_metadata.py  test_pdf_compressor.py  (+9 more)
ui/: components.py  main_window.py  styles.py  workers.py
utils/: __init__.py  file_utils.py  font_matcher.py  gpu_utils.py
(+20 files in other folders)
