[project]
name = "pdfforge"
version = "1.0.0"
description = "Editor de PDF com GUI e ML/AI para Linux"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [{name = "AndreBFarias"}]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP"]
exclude = ["venv/", ".venv/", "sprints/", "QR-Code-Void-Generator/"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_imports = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
